feat: создал компоненты header. Добавил глобальные стили.

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>its_agency_test</title>
 </head>
-<body>
-  <div id="app"></div>
+<body class="page__body">
+  <div class="page__container" id="app"></div>
   <script src="bundle.js"></script>
 </body>
 </html>
