--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>its_agency_test</title>
-</head>
-<body class="page__body">
-  <div class="page__container" id="app"></div>
-  <script src="bundle.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <title>its_agency_test</title>
+  </head>
+  <body class="page__body">
+    <div class="page__container" id="app"></div>
+    <script src="bundle.js"></script>
+  </body>
 </html>
